fixing layout bugs

--- a/web/id_system.css
+++ b/web/id_system.css
@@ -21,7 +21,8 @@ body {
 .intro-text {
   width: 100%;
   font-family: Effra_Std_Bd, sans-serif;
-  text-align: justify;
+  font-size: 1.25em;
+  margin-bottom: 5em;
 }
 
 #content {
@@ -39,7 +40,7 @@ body {
 .step {
   font-family: Effra_Std_Rg, sans-serif;
   font-size: 1.25em;
-  line-height: 1.4em;
+  line-height: 1.2em;
   color: black;
   width: 100%;
 }
@@ -52,23 +53,21 @@ body {
   font-family: Effra_Std_He, sans-serif;
   width: 100%;
   text-align: center;
-  line-height: 1em;
-  margin-bottom: 0.5em;
+  /*line-height: 1.2em;*/
 }
 
 .h1 {
   color: #79C0C4;
   font-size: 6.25em;
+  line-height: 1em;
+  margin-bottom: 0.1em;
 }
 
 .h2 {
   color: #38383A;
-  font-size: 4.4em;
-  /*margin-bottom: 1.2em;*/
-}
-
-.intro-text .left, .intro-text .right {
-  width: 49%;
+  font-size: 3em;
+  line-height: 1em;
+  margin-bottom: 1em;
 }
 
 .left { float: left; }
@@ -97,7 +96,6 @@ body {
 .id-text, .id-pop {
   color: #FFFDFF;
   position: relative;
-  top: -300px;
   line-height: 1.2em;
 }
 
@@ -113,45 +111,42 @@ body {
 .no .cross { display: block; }
 
 .title {
-  height: 110px;
   width: 100%;
+  margin-bottom: 10px;
 }
 .cant-live-rect, .can-live-rect, img {
   float: left;
 }
 
 .cant-live-rect, .can-live-rect {
-  height: 20px;
-  width: 20px;
-  margin-top: 8px;
-  margin-left: 3px;
+  height: 1.25em;
+  width: 1.25em;
+  margin-top: 0.5em;
+  margin-left: 0.4em;
+  /*margin-left: 0.1875em;*/
 }
 
 .cant-live-rect { background-color: #DDDEE0; }
 .can-live-rect { background-color: #3E8FAD; }
 
 #legend {
-  height: 120px;
   position: fixed;
   display: none;
   z-index: 100;
-  background-color: white;
   font-size: 0.8em;
-  opacity: 0.5;
+  width: 300px;
 }
 
 .legend-entry {
   width: 100%;
-  height: 30px;
+  height: 2.5em;
 }
 
 .legend-text {
-  height: 100%;
-  padding-top: 8px;
-  padding-left: 35px;
+  padding-top: 0.6em;
+  padding-left: 2.18em;
 }
 
-.vote-svg {
-  height: 100px;
+.background {
+  background-color: white;
 }
-
